--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "version": "3.0.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite dev",
     "build": "npm run typecheck && vite build",
@@ -17,13 +21,13 @@
     "@chenfengyuan/vue-number-input": "^2.0.1",
     "@vueuse/core": "^10.5.0",
     "@vueuse/integrations": "^10.5.0",
-    "ace-builds": "^1.30.0",
+    "ace-builds": "^1.31.1",
     "clipboard": "^2.0.11",
-    "core-js": "^3.33.0",
+    "core-js": "^3.33.2",
     "dayjs": "^1.11.10",
     "filesize": "^10.1.0",
     "js-base64": "^3.7.5",
-    "jwt-decode": "^3.1.2",
+    "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "material-icons": "^1.13.12",
     "normalize.css": "^8.0.1",
@@ -32,36 +36,36 @@
     "qrcode.vue": "^3.4.1",
     "tus-js-client": "^3.1.1",
     "utif": "^3.1.0",
-    "video.js": "^8.6.0",
+    "video.js": "^8.6.1",
     "videojs-hotkeys": "^0.2.28",
     "videojs-mobile-ui": "^1.1.1",
     "vue": "^3.3.4",
-    "vue-i18n": "^9.5.0",
+    "vue-i18n": "^9.6.4",
     "vue-lazyload": "^3.0.0",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "^1.4.0",
+    "@intlify/unplugin-vue-i18n": "^1.5.0",
     "@playwright/test": "^1.39.0",
     "@types/lodash-es": "^4.17.10",
-    "@types/node": "^20.8.6",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.51.0",
+    "eslint": "^8.52.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint-plugin-vue": "^9.18.1",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
-    "terser": "^5.22.0",
-    "vite": "^4.4.11",
-    "vite-plugin-compression2": "^0.10.5",
+    "terser": "^5.24.0",
+    "vite": "^4.5.0",
+    "vite-plugin-compression2": "^0.11.0",
     "vite-plugin-rewrite-all": "^1.0.1",
-    "vue-tsc": "^1.8.19"
+    "vue-tsc": "^1.8.22"
   }
 }
