--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,6 @@
     "@vueuse/core": "^10.5.0",
     "@vueuse/integrations": "^10.5.0",
     "ace-builds": "^1.31.1",
-    "clipboard": "^2.0.11",
     "core-js": "^3.33.2",
     "dayjs": "^1.11.10",
     "filesize": "^10.1.0",
@@ -40,6 +39,7 @@
     "videojs-hotkeys": "^0.2.28",
     "videojs-mobile-ui": "^1.1.1",
     "vue": "^3.3.4",
+    "vue-final-modal": "^4.4.5",
     "vue-i18n": "^9.6.4",
     "vue-lazyload": "^3.0.0",
     "vue-router": "^4.2.5",
