--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -97,4 +97,4 @@ jobs:
           version: latest
           args: release --clean
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
