--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,15 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "vite dev",
-    "build": "npm run typecheck && vite build",
-    "clean": "find ./dist -maxdepth 1 -mindepth 1 ! -name '.gitkeep' -exec rm -r {} +",
+    "dev": "concurrently -k \"npm:dev:go\" \"npm:dev:vite\"",
+    "dev:vite": "vite dev",
+    "dev:go": "cd .. && go run -tags dev .",
+    "build": "npm run build:vite && npm run build:go",
+    "build:vite": "npm run typecheck && vite build",
+    "build:go": "cd .. && go build .",
+    "clean": "npm run clean:vite && npm run clean:go",
+    "clean:vite": "find ./dist -maxdepth 1 -mindepth 1 ! -name '.gitkeep' -exec rm -r {} +",
+    "clean:go": "cd .. && go clean",
     "typecheck": "vue-tsc -p ./tsconfig.json --noEmit",
     "lint": "npm run typecheck && eslint --ext .vue,.ts src/",
     "lint:fix": "eslint --ext .vue,.ts --fix src/",
@@ -56,6 +62,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.2",
     "eslint": "^8.52.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
