--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,7 +28,7 @@ jobs:
       - run: make lint-backend
   lint:
     runs-on: ubuntu-latest
-    needs: [lint-frontend, lint-backend, lint-commits]
+    needs: [lint-frontend, lint-backend]
     steps:
       - run: echo "done"
 
