--- a/Dockerfile.s6.aarch64
+++ b/Dockerfile.s6.aarch64
@@ -2,7 +2,8 @@ FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.17
 
 RUN apk --update add ca-certificates \
                      mailcap \
-                     curl
+                     curl \
+                     mktorrent
 
 HEALTHCHECK --start-period=2s --interval=5s --timeout=3s \
   CMD curl -f http://localhost/health || exit 1
