--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,31 +19,30 @@ builds:
       - freebsd
     goarch:
       - amd64
-      - 386
+      - "386"
       - arm
       - arm64
       - riscv64
     goarm:
-      - 5
-      - 6
-      - 7
+      - "5"
+      - "6"
+      - "7"
     ignore:
       - goos: darwin
-        goarch: 386
+        goarch: "386"
       - goos: freebsd
         goarch: arm
 
 archives:
-  -
-    name_template: "{{.Os}}-{{.Arch}}{{if .Arm}}v{{.Arm}}{{end}}-{{ .ProjectName }}"
-    formats: [ 'tar.gz' ]
+  - name_template: "{{.Os}}-{{.Arch}}{{if .Arm}}v{{.Arm}}{{end}}-{{ .ProjectName }}"
+    formats: ["tar.gz"]
     format_overrides:
       - goos: windows
-        formats: [ 'zip' ]
+        formats: ["zip"]
 
 dockers:
-  -
-    dockerfile: Dockerfile
+  # Alpine docker images
+  - dockerfile: Dockerfile
     use: buildx
     build_flag_templates:
       - "--pull"
@@ -59,10 +58,8 @@ dockers:
       - "filebrowser/filebrowser:{{ .Tag }}-amd64"
       - "filebrowser/filebrowser:v{{ .Major }}-amd64"
     extra_files:
-      - docker_config.json
-      - healthcheck.sh
-  -
-    dockerfile: Dockerfile
+      - docker
+  - dockerfile: Dockerfile
     use: buildx
     build_flag_templates:
       - "--pull"
@@ -78,10 +75,8 @@ dockers:
       - "filebrowser/filebrowser:{{ .Tag }}-arm64"
       - "filebrowser/filebrowser:v{{ .Major }}-arm64"
     extra_files:
-      - docker_config.json
-      - healthcheck.sh
-  -
-    dockerfile: Dockerfile
+      - docker
+  - dockerfile: Dockerfile
     use: buildx
     build_flag_templates:
       - "--pull"
@@ -98,10 +93,8 @@ dockers:
       - "filebrowser/filebrowser:{{ .Tag }}-armv6"
       - "filebrowser/filebrowser:v{{ .Major }}-armv6"
     extra_files:
-      - docker_config.json
-      - healthcheck.sh
-  -
-    dockerfile: Dockerfile
+      - docker
+  - dockerfile: Dockerfile
     use: buildx
     build_flag_templates:
       - "--pull"
@@ -113,16 +106,15 @@ dockers:
       - "--platform=linux/arm/v7"
     goos: linux
     goarch: arm
-    goarm: '7'
+    goarm: "7"
     image_templates:
       - "filebrowser/filebrowser:{{ .Tag }}-armv7"
       - "filebrowser/filebrowser:v{{ .Major }}-armv7"
     extra_files:
-      - docker_config.json
-      - healthcheck.sh
-## s6 based docker images
-  -
-    dockerfile: Dockerfile.s6
+      - docker
+
+  ## s6-overlay docker images
+  - dockerfile: Dockerfile.s6
     use: buildx
     build_flag_templates:
       - "--pull"
@@ -138,10 +130,8 @@ dockers:
       - "filebrowser/filebrowser:{{ .Tag }}-amd64-s6"
       - "filebrowser/filebrowser:v{{ .Major }}-amd64-s6"
     extra_files:
-      - docker/root
-      - healthcheck.sh
-  -
-    dockerfile: Dockerfile.s6.aarch64
+      - docker
+  - dockerfile: Dockerfile.s6.aarch64
     use: buildx
     build_flag_templates:
       - "--pull"
@@ -157,8 +147,8 @@ dockers:
       - "filebrowser/filebrowser:{{ .Tag }}-arm64-s6"
       - "filebrowser/filebrowser:v{{ .Major }}-arm64-s6"
     extra_files:
-      - docker/root
-      - healthcheck.sh
+      - docker
+
 docker_manifests:
   - name_template: "filebrowser/filebrowser:latest"
     image_templates:
@@ -175,7 +165,7 @@ docker_manifests:
       - "filebrowser/filebrowser:v{{ .Major }}-amd64"
       - "filebrowser/filebrowser:v{{ .Major }}-arm64"
       - "filebrowser/filebrowser:v{{ .Major }}-armv7"
-## s6 image manifests
+  ## s6 image manifests
   - name_template: "filebrowser/filebrowser:s6"
     image_templates:
       - "filebrowser/filebrowser:{{ .Tag }}-amd64-s6"
