--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -88,7 +88,7 @@ dockers:
       - "--platform=linux/arm/v6"
     goos: linux
     goarch: arm
-    goarm: '6'
+    goarm: "6"
     image_templates:
       - "filebrowser/filebrowser:{{ .Tag }}-armv6"
       - "filebrowser/filebrowser:v{{ .Major }}-armv6"
@@ -189,11 +189,6 @@ homebrew_casks:
       email: robot@filebrowser.org
     homepage: https://github.com/filebrowser/filebrowser
     description: File Browser is a create-your-own-cloud-kind of software where you can install it on a server, direct it to a path and then access your files through a nice web interface
-    license: "MIT"
-    # make the old formula conflict with the cask:
-    conflicts:
-      - formula: filebrowser
-    # if your app/binary isn't signed and notarized, you'll need this:
     hooks:
       post:
         install: |
