--- a/Dockerfile.s6
+++ b/Dockerfile.s6
@@ -12,7 +12,9 @@ COPY filebrowser /bin/filebrowser
 COPY docker/common/ /
 COPY docker/s6/ /
 
-RUN chown -R abc:abc /bin/filebrowser /defaults healthcheck.sh
+RUN chown -R abc:abc /bin/filebrowser /defaults healthcheck.sh && \
+  apk add libcap && \
+  setcap 'cap_net_bind_service=+ep' /bin/filebrowser
 
 # Define healthcheck script
 HEALTHCHECK --start-period=2s --interval=5s --timeout=3s CMD /healthcheck.sh
