--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,7 @@
     "typecheck": "vue-tsc -p ./tsconfig.tsc.json --noEmit",
     "lint": "eslint src/",
     "lint:fix": "eslint --fix src/",
-    "format": "prettier --write .",
-    "test": "playwright test"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@chenfengyuan/vue-number-input": "^2.0.1",
@@ -50,7 +49,6 @@
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^11.0.1",
-    "@playwright/test": "^1.54.1",
     "@tsconfig/node24": "^24.0.2",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.10.1",
