--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Site
+name: Build and Release Docs
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  deploy:
+  build-and-release:
     permissions:
       contents: read
       deployments: write
@@ -16,13 +16,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
+      - name: Install Task
+        uses: go-task/setup-task@v1
       - name: Build site
-        run: make site
-
+        run: task docs
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/wrangler-action@v3
         with:
