--- a/.github/workflows/lint-pr.yaml
+++ b/.github/workflows/lint-pr.yaml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   main:
-    name: Validate PR title
+    name: Validate Title
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v6
