--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -95,8 +95,9 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Build frontend
-        run: make build-frontend
+      - name: Install Task
+        uses: go-task/setup-task@v1
+      - run: task build-frontend
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
