chore: add token-expiration-time to default Docker settings
Makes the token expiration setting more discoverable by including it
in the default settings.json file with the default value of 2h.

--- a/docker/common/defaults/settings.json
+++ b/docker/common/defaults/settings.json
@@ -4,5 +4,6 @@
   "address": "",
   "log": "stdout",
   "database": "/database/filebrowser.db",
-  "root": "/srv"
+  "root": "/srv",
+  "token-expiration-time": "2h"
 }
