--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -96,7 +96,10 @@ nav:
   - Home: index.md
   - Documentation:
     - Installation: installation.md
-    - Configuration: configuration.md
+    - Configuration:
+      - customization.md
+      - authentication.md
+      - command-execution.md
     - Deployment: deployment.md
     - Command Line Usage:
       - cli/filebrowser.md
