--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "marked": "^17.0.0",
+    "marked-katex-extension": "^5.1.6",
     "material-icons": "^1.13.14",
     "normalize.css": "^8.0.1",
     "pinia": "^3.0.4",
